Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-3349

Python server does not handle processor exception

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.9.3
    • None
    • None
    • Patch Available

    Description

      It's same as THRIFT-3335 (of ruby) for python

      When exception is raised in user code (server processor/handler), (T)ApplicationException should be propagated to client side, as other language implementations do.

      Attachments

        Issue Links

          Activity

            People

              nsuke Nobuaki Sukegawa
              nsuke Nobuaki Sukegawa
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: