THRIFT-3349 Python server does not handle processor exception Client: Python Patch: Nobuaki Sukegawa <nsukeg@gmail.com>

This closes #621